<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrEditSalesPersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <ImageView
            android:id="@+id/iv_salesperson_pic"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:contentDescription="@string/salesperson_picture"
            tools:src="@drawable/baseline_account_box_24" />

        <Button
            android:id="@+id/btn_add_photo"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:text="@string/add_photo"
            tools:ignore="" />

        <EditText
            android:id="@+id/et_salesperson_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/et_name"
            android:textColorHint="#546E7A"
            android:inputType="text"
            android:minHeight="48dp"
            android:layout_gravity="center"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/et_salesperson_phone_number"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#546E7A"
            tools:ignore="Autofill" />

        <Spinner
            android:id="@+id/spr_regions"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            />

        <Button
            android:id="@+id/btn_save_salesperson"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/b_save"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="200dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:visibility="invisible"
 />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>