<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="300dp"
            android:layout_marginTop="56dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />
        <TextView
            android:id="@+id/textView"
            android:layout_width="fill_parent"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="300dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            android:layout_gravity="center" />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginStart="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.01">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <Button
                    android:id="@+id/addSalesperson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/salespersons" />

                <Button
                    android:id="@+id/btn_add_sales_record"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_add_sales_record" />


            </LinearLayout>

        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>